[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radius_robotics_design_documentation"
version = "0.1.0"
description = "A tool to bridge scan planning and robotic control for Radius Robotics project."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin"
]
